--- a/layanan.html
+++ b/layanan.html
@@ -167,8 +167,127 @@
       </div>
     </div>
 
+    <!-- ============================================ -->
+    <!-- LAYANAN TAMBAHAN (Tanpa emoji, sesuai permintaan) -->
+    <!-- ============================================ -->
+
+    <!-- LAYANAN JASA UMUM -->
+    <div class="card">
+      <h3>LAYANAN JASA UMUM (Segera Hadir)</h3>
+      <p>Berbagai kebutuhan tenaga umum siap membantu Anda.</p>
+      <ul>
+        <li>Bantuan pekerjaan harian</li>
+        <li>Tenaga serbaguna</li>
+        <li>Tugas operasional ringan</li>
+        <li>Dukungan pekerjaan umum</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20LAYANAN%20JASA%20UMUM.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+          href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Jasa%20Umum">
+          Email Layanan Jasa Umum
+        </a>
+      </div>
+    </div>
+
+    <!-- CLEANING SERVICE -->
+    <div class="card">
+      <h3>CLEANING SERVICE</h3>
+      <p>Layanan kebersihan profesional untuk rumah, kantor, dan area bisnis.</p>
+      <ul>
+        <li>Pembersihan menyeluruh</li>
+        <li>Pengepel & vakum</li>
+        <li>Pembersihan kamar mandi & dapur</li>
+        <li>Jasa kebersihan terjadwal</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20CLEANING%20SERVICE.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+          href="mailto:kontakassistenku@gmail.com?subject=Info%20Cleaning%20Service">
+          Email Cleaning Service
+        </a>
+      </div>
+    </div>
+
+    <!-- KIRIM BARANG & JASTIP -->
+    <div class="card">
+      <h3>KIRIM BARANG & JASTIP (Segera Hadir)</h3>
+      <p>Layanan antar barang, belanja titipan, dan kebutuhan pengiriman cepat.</p>
+      <ul>
+        <li>Antar barang dalam kota</li>
+        <li>Belanja titipan (Jastip)</li>
+        <li>Pengiriman express</li>
+        <li>Kurir personal</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20KIRIM%20BARANG%20%26%20JASTIP.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+          href="mailto:kontakassistenku@gmail.com?subject=Info%20Kirim%20Barang%20dan%20Jastip">
+          Email Layanan Kirim Barang & Jastip
+        </a>
+      </div>
+    </div>
+
+    <!-- SERVICE & PERBAIKAN -->
+    <div class="card">
+      <h3>SERVICE & PERBAIKAN (Segera Hadir)</h3>
+      <p>Teknisi untuk perbaikan ringan & kebutuhan teknis rumah atau kantor.</p>
+      <ul>
+        <li>Perbaikan umum</li>
+        <li>Service peralatan rumah</li>
+        <li>Instalasi ringan</li>
+        <li>Pengecekan kerusakan</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20SERVICE%20%26%20PERBAIKAN.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+          href="mailto:kontakassistenku@gmail.com?subject=Info%20Service%20dan%20Perbaikan">
+          Email Layanan Service & Perbaikan
+        </a>
+      </div>
+    </div>
+
+    <!-- TRANSPORTASI -->
+    <div class="card">
+      <h3>TRANSPORTASI (Segera Hadir)</h3>
+      <p>Layanan transportasi untuk kebutuhan perjalanan pribadi & operasional.</p>
+      <ul>
+        <li>Antar-jemput</li>
+        <li>Transportasi harian</li>
+        <li>Mobilitas operasional</li>
+        <li>Kendaraan siap pakai</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20TRANSPORTASI.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+          href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Transportasi">
+          Email Layanan Transportasi
+        </a>
+      </div>
+    </div>
+
     <!-- ============================== -->
-    <!--   LAYANAN BARU: WEBSITE        -->
+    <!--   Pembuatan Website (Tetap)    -->
     <!-- ============================== -->
 
     <div class="card">
