--- a/loker-autocad-drafter.html
+++ b/loker-autocad-drafter.html
@@ -188,7 +188,7 @@
     <section>
         <h2>Kualifikasi Umum</h2>
         <ul>
-            <li>Pendidikan minimal SMK / D3 / S1 (Teknik Mesin, Teknik Sipil, Arsitektur, atau bidang terkait)</li>
+            <li>Pendidikan minimal SMK / D3 / S1 (Teknik Mesin, Teknik Sipil, atau bidang terkait)</li>
             <li>Fresh graduate dipersilakan melamar</li>
             <li>Mampu mengoperasikan AutoCAD 2D atau software sejenis</li>
             <li>Memahami dasar gambar teknik (skala, dimensi, dan pengelolaan layer)</li>
@@ -197,7 +197,7 @@
             <li>Mampu bekerja sesuai arahan dan standar kerja</li>
             <li>Bertanggung jawab, disiplin, dan komunikatif</li>
             <li>Siap bekerja secara remote</li>
-            <li>Memiliki laptop pribadi</li>
+            <li>Laptop disediakan Kantor</li>
         </ul>
     </section>
 
@@ -232,7 +232,7 @@
         <div class="level">
             <h3>Junior / Pemula</h3>
             <div class="fee">
-                Gaji setara UMR DKI Jakarta<br>
+                Gaji setara UMR DKI Jakarta penempatan di PT. Saberindo Pasific Jakarta Utara<br>
                 Dikurangi biaya layanan Assistenku sebesar 15% – 20%
             </div>
         </div>
