--- a/loker-autocad-drafter.html
+++ b/loker-autocad-drafter.html
@@ -232,7 +232,7 @@
         <div class="level">
             <h3>Junior / Pemula</h3>
             <div class="fee">
-                Gaji setara UMR DKI Jakarta penempatan di PT. Saberindo Pasific Jakarta Utara<br>
+                Gaji setara UMR DKI Jakarta penempatan di PT. Saberindo Pasific Jakarta Pusat<br>
                 Dikurangi biaya layanan Assistenku sebesar 15% – 20%
             </div>
         </div>
