--- a/karir.html
+++ b/karir.html
@@ -55,25 +55,7 @@
 <section>
   <h2>Lowongan Tersedia</h2>
 
-  <div class="card-grid">
-
-    <!-- ART -->
-    
-
-    <!-- Lansia -->
-    <div class="card">
-      <h3>Pendamping Lansia</h3>
-      <p>Mendampingi lansia dengan perhatian dan empati.</p>
-
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Pendamping aktivitas</li>
-        <li>Bantuan harian</li>
-        <li>Sahabat bicara</li>
-      </ul>
-
-      <strong>Syarat:</strong>
-      <ul<!-- ART -->
+  <!-- ART -->
 <div class="card">
   <h3>Asisten Rumah Tangga (ART)</h3>
   <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
@@ -94,7 +76,7 @@
 
   <div class="apply-box">
     <a class="btn-primary" target="_blank"
-       href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">
+       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
        Lamar via WhatsApp
     </a>
 
@@ -107,24 +89,39 @@
       Lihat Detail Lowongan
     </a>
   </div>
-</div>>
-        <li>Usia 20–45 tahun</li>
-        <li>Sabar, sopan, dan telaten</li>
-        <li>Sehat jasmani</li>
-      </ul>
+</div>
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
-           Lamar via WhatsApp
-        </a>
+<!-- Pendamping Lansia -->
+<div class="card">
+  <h3>Pendamping Lansia</h3>
+  <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
-           Lamar via Email
-        </a>
-      </div>
-    </div>
+  <strong>Tugas:</strong>
+  <ul>
+    <li>Pendamping aktivitas harian</li>
+    <li>Membantu kebutuhan dasar lansia</li>
+    <li>Menjadi teman bicara</li>
+  </ul>
+
+  <strong>Syarat:</strong>
+  <ul>
+    <li>Usia 20–45 tahun</li>
+    <li>Sabar, sopan, dan telaten</li>
+    <li>Sehat jasmani</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
+       Lamar via WhatsApp
+    </a>
+
+    <a class="btn-secondary" target="_blank"
+       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
+       Lamar via Email
+    </a>
+  </div>
+</div>
 
     <!-- Driver -->
     <div class="card">
