--- a/karir.html
+++ b/karir.html
@@ -200,13 +200,18 @@
       </p>
 
       <div class="apply-box">
-        <a class="btn-primary" href="/loker-autocad-drafter.html">
-          Lihat Detail Lowongan
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
+          Lamar via WhatsApp
         </a>
 
         <a class="btn-secondary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
-          Lamar via WhatsApp
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+          Lamar via Email
+        </a>
+
+        <a class="btn-outline" href="loker-art.html">
+          Lihat Detail Lowongan
         </a>
       </div>
     </div>
