--- a/loker-art.html
+++ b/loker-art.html
@@ -227,3 +227,7 @@
 
 </body>
 </html>
+
+<footer style="text-align:center; font-size:0.85em; color:#777; margin:30px 0;">
+  © 2025 Assistenku. All rights reserved.
+</footer>
