--- a/kompro.html
+++ b/kompro.html
@@ -372,6 +372,17 @@
     membantu klien bekerja lebih tenang dan terkontrol.
   </p>
 
+  <!-- Tombol Download Company Profile -->
+  <a href="https://drive.google.com/file/d/1vpUqLuSZ6ZZycryBUFHFEyrYcfmIRiiM/view?usp=drivesdk"
+     target="_blank"
+     style="display:inline-block; margin-top:24px; padding:14px 32px;
+            background:#e5edff; color:#0f3d8a; border-radius:8px;
+            text-decoration:none; font-weight:bold;">
+    Download Company Profile (PDF)
+  </a>
+
+  <!-- Tombol Detail Layanan -->
+  <br><br>
   <a href="/layanan">Lihat Detail Layanan Assistenku</a>
 </div>
 
