--- a/serviceofferings.html
+++ b/serviceofferings.html
@@ -127,7 +127,7 @@
 
 <!-- ===== 1. PENDAHULUAN ===== -->
 <div class="section">
-  <h2>1. Pendahuluan Penawaran</h2>
+  <h2>Pendahuluan Penawaran</h2>
   <p>
     Assistenku hadir sebagai solusi atas kebutuhan tenaga asistensi yang tidak
     hanya cepat tersedia, tetapi juga aman, terkelola, dan dapat
@@ -147,7 +147,7 @@
 
 <!-- ===== 2. NILAI UTAMA ===== -->
 <div class="section">
-  <h2>2. Nilai Utama yang Kami Tawarkan</h2>
+  <h2>Nilai Utama yang Kami Tawarkan</h2>
   <h3>Asistensi yang Dikelola, Bukan Sekadar Disediakan</h3>
   <ul>
     <li>Tenaga profesional yang terseleksi dan terstandar</li>
@@ -163,7 +163,7 @@
 
 <!-- ===== 3. SISTEM & KEAMANAN ===== -->
 <div class="section">
-  <h2>3. Pendekatan Berbasis Sistem & Keamanan</h2>
+  <h2>Pendekatan Berbasis Sistem & Keamanan</h2>
   <ul>
     <li>Penugasan dan penjadwalan kerja</li>
     <li>Komunikasi dan pelaporan aktivitas</li>
@@ -183,7 +183,7 @@
 
 <!-- ===== 4. CAKUPAN LAYANAN ===== -->
 <div class="section">
-  <h2>4. Cakupan Layanan yang Fleksibel</h2>
+  <h2>Cakupan Layanan yang Fleksibel</h2>
 
   <h3>Kebutuhan Pribadi & Keluarga</h3>
   <ul>
@@ -225,7 +225,7 @@
 
 <!-- ===== 5. ALUR KERJA ===== -->
 <div class="section">
-  <h2>5. Alur Kerja yang Sederhana dan Terkontrol</h2>
+  <h2>Alur Kerja yang Sederhana dan Terkontrol</h2>
   <ol>
     <li>Klien menyampaikan kebutuhan layanan</li>
     <li>Assistenku menyeleksi dan menugaskan mitra yang sesuai</li>
@@ -240,7 +240,7 @@
 
 <!-- ===== 6. MANFAAT ===== -->
 <div class="section">
-  <h2>6. Manfaat bagi Klien</h2>
+  <h2>Manfaat bagi Klien</h2>
   <ul>
     <li>Efisiensi waktu dan tenaga</li>
     <li>Kepastian proses dan tanggung jawab</li>
@@ -251,7 +251,7 @@
 
 <!-- ===== 7. PENUTUP ===== -->
 <div class="section">
-  <h2>7. Penutup Penawaran</h2>
+  <h2>Penutup Penawaran</h2>
   <p>
     Assistenku adalah mitra asistensi berbasis sistem yang dirancang untuk
     menjawab kebutuhan modern, baik untuk individu, keluarga, maupun
