--- a/serviceofferings.html
+++ b/serviceofferings.html
@@ -284,7 +284,7 @@
     </a>
 
     <a class="btn-pdf"
-       href="#"
+       href="https://drive.google.com/file/d/1gGpyo3mDiacEJvHZrhO6e37EfiGDsKJL/view?usp=drive_link"
        target="_blank">
       Download PDF Penawaran
     </a>
