--- a/loker-art.html
+++ b/loker-art.html
@@ -202,7 +202,7 @@
     <li>Berpengalaman diutamakan, pemula dipersilakan.</li>
   </ul>
 
-  <h2>Sistem Kerja & Estimasi Gaji</h2>
+  <h2>Sistem Kerja</h2>
   <div class="salary">
     <h3>ART Pulang Pergi</h3>
 
