--- a/karir.html
+++ b/karir.html
@@ -126,7 +126,6 @@
     <li>Sehat jasmani</li>
   </ul>
 
-  <div class="apply-box">
     <a class="btn-primary" target="_blank"
        href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
       Lamar via WhatsApp
@@ -136,9 +135,14 @@
        href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
       Lamar via Email
     </a>
+
+  <div class="apply-box">
+    <!-- Tombol Detail Lowongan -->
+    <a class="btn-outline" href="loker-caregiver.html">
+      Lihat Detail Lowongan
+    </a>
   </div>
 </div>
-
 
     <!-- Pengemudi Pribadi -->
     <div class="card">
