--- a/loker-caregiver.html
+++ b/loker-caregiver.html
@@ -192,6 +192,34 @@
         sehari-hari dengan empati, tanggung jawab, dan profesionalisme.
       </div>
 
+      <div class="section-title">Kualifikasi</div>
+      <div class="info-box">
+        <ul>
+          <li>Usia 20 – 50 tahun</li>
+          <li>Cukup KTP tanpa perlu ijazah</li>
+          <li>Sehat jasmani dan rohani</li>
+          <li>Sabar, penyayang, dan memiliki empati tinggi</li>
+          <li>Jujur, disiplin, dan bertanggung jawab</li>
+          <li>Mampu merawat lansia dengan baik dan penuh perhatian</li>
+          <li>Mampu bekerja mandiri maupun mengikuti arahan</li>
+          <li>Bersedia bekerja harian / pulang–pergi / menginap</li>
+          <li>Memiliki sikap sopan dan menjaga etika kerja</li>
+          <li>Pengalaman sebagai Caregiver / Perawat Lansia diutamakan</li>
+          <li>Punya kendaraan sendiri</li>
+        </ul>
+      </div>
+
+      <div class="section-title">Tugas Utama</div>
+      <div class="info-box">
+        <ul>
+          <li>Membantu aktivitas harian lansia / orang sakit</li>
+          <li>Mendampingi dan menjaga keselamatan lansia</li>
+          <li>Membantu makan, mandi, dan berpakaian</li>
+          <li>Memantau kondisi fisik lansia / orang sakit secara umum</li>
+          <li>Menjaga kebersihan dan kenyamanan lansia</li>
+        </ul>
+      </div>
+
       <div class="section-title">Sistem Kerja</div>
       <div class="info-box">
         <ul>
