--- a/layanan.html
+++ b/layanan.html
@@ -63,28 +63,40 @@
 
   <div class="card-grid">
 
-    <!-- ART -->
-    <div class="card">
-      <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah dengan standar profesional.</p>
-      <ul>
-        <li>Pembersihan rumah</li>
-        <li>Mencuci & menyetrika</li>
-        <li>Memasak dasar</li>
-        <li>Manajemen rumah tangga</li>
-      </ul>
+   <!-- ART -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
-           Email Layanan ART
-        </a>
-      </div>
-    </div>
+  <!-- Gambar ART -->
+  <img
+    src="/assets/art.png"
+    alt="Layanan Asisten Rumah Tangga Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Asisten Rumah Tangga (ART)</h3>
+  <p>Membantu pekerjaan rumah dengan standar profesional.</p>
+
+  <ul>
+    <li>Pembersihan rumah</li>
+    <li>Mencuci & menyetrika</li>
+    <li>Memasak dasar</li>
+    <li>Manajemen rumah tangga</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
+      Email Layanan ART
+    </a>
+  </div>
+
+</div>
+
 
     <!-- Baby Sitter -->
     <div class="card">
