--- a/layanan.html
+++ b/layanan.html
@@ -98,28 +98,40 @@
 </div>
 
 
-    <!-- Baby Sitter -->
-    <div class="card">
-      <h3>Baby Sitter</h3>
-      <p>Perawatan bayi & balita dengan penuh perhatian.</p>
-      <ul>
-        <li>Perawatan harian</li>
-        <li>Pendamping aktivitas</li>
-        <li>Pengawasan makan & tidur</li>
-        <li>Kebersihan area bayi</li>
-      </ul>
+    <!-- Babysitter -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Baby%20Sitter">
-          Email Layanan Baby Sitter
-        </a>
-      </div>
-    </div>
+  <!-- Gambar Babysitter -->
+  <img
+    src="/assets/babysitter.png"
+    alt="Layanan Babysitter Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Babysitter / Pengasuh Anak</h3>
+  <p>Mendampingi dan menjaga anak dengan penuh perhatian dan tanggung jawab.</p>
+
+  <ul>
+    <li>Pengawasan harian anak</li>
+    <li>Aktivitas bermain & edukatif</li>
+    <li>Membantu rutinitas anak</li>
+    <li>Menjaga keamanan & kenyamanan</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Babysitter.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Babysitter">
+      Email Layanan Babysitter
+    </a>
+  </div>
+
+</div>
+
 
    <!-- Pendamping Lansia -->
 <div class="card">
