--- a/layanan.html
+++ b/layanan.html
@@ -368,37 +368,40 @@
       </div>
     </div>
 
-    <!-- AutoCAD & Drafting Teknis -->
+  <!-- AutoCAD & Drafting Teknis -->
 <div class="card">
-  <h3>AutoCAD & Drafting Teknis</h3>
 
-  <p>
-    Layanan pembuatan dan pengolahan gambar teknis profesional
-    untuk kebutuhan proyek arsitektur, mesin, dan sipil.
-  </p>
+  <!-- Gambar AutoCAD -->
+  <img
+    src="/assets/autocad.png"
+    alt="Layanan AutoCAD dan Drafting Teknis Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>AutoCAD & Drafting Teknis</h3>
+  <p>Menyediakan tenaga drafter profesional untuk kebutuhan gambar teknis.</p>
 
   <ul>
-    <li>Gambar kerja AutoCAD 2D</li>
-    <li>Redraw dari sketsa / foto / PDF</li>
-    <li>Revisi gambar sesuai standar proyek</li>
-    <li>Detailing & penyesuaian skala</li>
-    <li>Dukungan software setara AutoCAD</li>
+    <li>Gambar kerja arsitektur</li>
+    <li>Gambar teknik sipil & mekanikal</li>
+    <li>Revisi dan penyesuaian gambar</li>
+    <li>Drafting 2D & 3D</li>
   </ul>
-
-  <p><i>Didukung drafter Junior, Intermediate, hingga Expert sesuai kebutuhan.</i></p>
 
   <div class="apply-box">
     <a class="btn-primary" target="_blank"
        href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20AutoCAD%20dan%20Drafting%20Teknis.">
       Chat via WhatsApp
     </a>
-
     <a class="btn-secondary" target="_blank"
-       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20AutoCAD%20Drafting">
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20AutoCAD%20dan%20Drafting%20Teknis">
       Email Layanan AutoCAD
     </a>
   </div>
+
 </div>
+
 
 
   </div>
