--- a/layanan.html
+++ b/layanan.html
@@ -332,41 +332,39 @@
       </div>
     </div>
 
-    <!-- ============================== -->
-    <!--   Pembuatan Website (Tetap)    -->
-    <!-- ============================== -->
+   <!-- Pembuatan Website & Sistem -->
+<div class="card">
 
-    <div class="card">
-      <h3>Pembuatan Website & Sistem</h3>
-      <p>Layanan pembuatan website cepat, responsif, modern, dan siap dipakai untuk bisnis.</p>
+  <!-- Gambar Website & Sistem -->
+  <img
+    src="/assets/web-system.png"
+    alt="Layanan Pembuatan Website dan Sistem Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
 
-      <ul>
-        <li>Pembuatan Landing Page</li>
-        <li>Pembuatan Website Profil Perusahaan</li>
-        <li>Pembuatan Sistem (Admin Panel / HR / Mitra)</li>
-        <li>Optimasi kecepatan & SEO dasar</li>
-      </ul>
+  <h3>Pembuatan Website & Sistem</h3>
+  <p>Menyediakan pengembangan website dan sistem digital sesuai kebutuhan bisnis.</p>
 
-      <h4 style="margin-top:10px;">Kelas Pembuatan Website</h4>
-      <ul>
-        <li><b>Kelas 1 — Basic</b></li>
-        <li><b>Kelas 2 — Premium</b></li>
-        <li><b>Kelas 3 — Profesional</b></li>
-        <li><b>Kelas 4 — Bisnis</b></li>
-        <li><b>Kelas 5 — Enterprise</b></li>
-      </ul>
+  <ul>
+    <li>Website company profile & landing page</li>
+    <li>Sistem informasi & dashboard</li>
+    <li>Aplikasi berbasis web (PWA)</li>
+    <li>Maintenance & pengembangan lanjutan</li>
+  </ul>
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20membuat%20website%20bersama%20Assistenku.">
-          Chat via WhatsApp
-        </a>
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Pembuatan%20Website%20dan%20Sistem.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pembuatan%20Website%20dan%20Sistem">
+      Email Layanan Website & Sistem
+    </a>
+  </div>
 
-        <a class="btn-secondary" href="/hargawebsite.html">
-          Lihat Biaya Pembuatan Website
-        </a>
-      </div>
-    </div>
+</div>
 
   <!-- AutoCAD & Drafting Teknis -->
 <div class="card">
