--- a/profil.html
+++ b/profil.html
@@ -154,6 +154,14 @@
          class="btn-primary" target="_blank">
         Lihat Semua Dokumen Legalitas
       </a>
+
+      <!-- Tombol ke Subdomain Legal -->
+      <a href="https://legal.assistenku.com"
+         class="btn-primary"
+         style="margin-top:12px; display:inline-block;"
+         target="_blank">
+        Legal Notice & Compliance Overview
+      </a>
     </div>
 
   </div>
