Fix HTML structure by adding missing div tag

--- a/profil.html
+++ b/profil.html
@@ -150,7 +150,8 @@
 
       <img src="/NIB2.png" class="legal-img">
       </div
-
+        
+        <div class="card">
       <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
          class="btn-primary" target="_blank">
         Lihat Semua Dokumen Legalitas
