Add Marketing Freelance job listing to karir.html

--- a/karir.html
+++ b/karir.html
@@ -57,6 +57,63 @@
 
   <div class="card-grid">
 
+    <!-- Marketing Freelance -->
+<div class="card">
+
+  <!-- Thumbnail Poster -->
+  <div class="card-image">
+    <img src="loker-marketing-freelance.png"
+         alt="Lowongan Marketing Freelance Assistenku">
+  </div>
+
+  <h3>Marketing Freelance</h3>
+
+  <p>
+    Kesempatan bagi individu yang ingin mendapatkan penghasilan tambahan
+    dengan memasarkan layanan Assistenku secara fleksibel dan profesional.
+  </p>
+
+  <strong>Peran Utama:</strong>
+  <ul>
+    <li>Mempromosikan layanan Assistenku kepada calon klien</li>
+    <li>Membantu klien memahami kebutuhan layanan</li>
+    <li>Menghubungkan klien dengan tim Assistenku</li>
+  </ul>
+
+  <strong>Skema Komisi:</strong>
+  <ul>
+    <li>Komisi tetap <strong>Rp100.000</strong> per <strong>SPL LOLOS</strong></li>
+    <li>Bonus target bulanan hingga <strong>Rp1.500.000</strong></li>
+    <li>Komisi dibayar setelah SPL berstatus <strong>SELESAI</strong></li>
+    <li>Tidak berbasis persentase profit</li>
+    <li>Tidak ada potongan pajak & BPJS</li>
+  </ul>
+
+  <strong>Cocok untuk:</strong>
+  <ul>
+    <li>Freelancer / pekerja lepas</li>
+    <li>Pekerja aktif yang ingin penghasilan tambahan</li>
+    <li>Individu dengan relasi luas</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Marketing%20Freelance%20Assistenku">
+      Lamar via WhatsApp
+    </a>
+
+    <a class="btn-secondary" target="_blank"
+       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20CV%20Marketing%20Freelance%20Assistenku">
+      Lamar via Email
+    </a>
+
+    <a class="btn-outline" href="/marketing-freelance.html">
+      Lihat Detail Program
+    </a>
+  </div>
+
+</div>
+
   <!-- ART -->
   <div class="card">
 
