--- a/layanan.html
+++ b/layanan.html
@@ -459,7 +459,9 @@
   </p>
 </section>
 
-<footer>© 2025 Assistenku</footer>
+<footer>
+  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+</footer>
 
 <script src="/script.js"></script>
 
