--- a/kontak.html
+++ b/kontak.html
@@ -108,7 +108,9 @@
   </div>
 </section>
 
-<footer>© 2025 Assistenku</footer>
+<footer>
+  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+</footer>
 <script src="/script.js"></script>
 </body>
 </html>
