--- a/hargawebsite.html
+++ b/hargawebsite.html
@@ -145,7 +145,7 @@
 
 <!-- FOOTER -->
 <footer style="text-align:center; padding:40px 20px; margin-top:40px;">
-  <p style="font-size:14px; color:#666;">© 2025 Assistenku Web Studio — Semua Hak Dilindungi</p>
+  <p style="font-size:14px; color:#666;">© 2025 PT Assistenku Solusi Indonesia — Semua Hak Dilindungi</p>
 </footer>
 
 </body>
