--- a/kompro.html
+++ b/kompro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Company Profile | Assistenku</title>
+  <title>Company Profile | PT Assistenku Solusi Indonesia</title>
   <meta name="description" content="Company Profile Assistenku – solusi asisten profesional berbasis sistem, aman, dan terverifikasi untuk individu dan perusahaan." />
 
   <style>
@@ -185,7 +185,7 @@
      HALAMAN — HERO
 ================================= -->
 <section class="hero">
-  <h1>ASSISTENKU</h1>
+  <h1>ASSISTENKU SOLUSI INDONESIA</h1>
   <p class="tagline">Solusi Asisten Profesional dalam Satu Sistem Terpadu</p>
   <p>
     Platform penyedia dan pengelola asisten profesional yang membantu individu
@@ -387,7 +387,7 @@
 </div>
 
 <div class="footer">
-  <p>&copy; Assistenku. Semua hak dilindungi.</p>
+  <p>&copy; PT Assistenku Solusi Indonesia. Semua hak dilindungi.</p>
 </div>
 
 </section>
