--- a/loker-art.html
+++ b/loker-art.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lowongan Asisten Rumah Tangga (ART) | Assistenku</title>
+  <title>Lowongan Asisten Rumah Tangga (ART) | PT Assistenku Solusi Indonesia</title>
   <meta name="description" content="Lowongan kerja Asisten Rumah Tangga (ART) dengan sistem pulang pergi, harian, atau menginap. Tanpa ijazah.">
   <style>
     body {
