--- a/loker-autocad-drafter.html
+++ b/loker-autocad-drafter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Open Recruitment AutoCAD Drafter Junior | Assistenku</title>
+    <title>Open Recruitment AutoCAD Drafter Junior | PT Assistenku Solusi Indonesia</title>
     <meta name="description" content="Lowongan AutoCAD Drafter Junior di Assistenku. Remote, project-based, cocok untuk fresh graduate SMK/D3/S1 teknik." />
 
     <style>
@@ -271,7 +271,7 @@
     </section>
 
     <footer>
-        © 2025 Assistenku. All rights reserved.
+        © 2025 PT Assistenku Indonesia. All rights reserved.
     </footer>
 
 </div>
