--- a/loker-caregiver.html
+++ b/loker-caregiver.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lowongan Caregiver / Pendamping Lansia | Assistenku</title>
+  <title>Lowongan Caregiver / Pendamping Lansia | PT Assistenku Solusi Indonesia</title>
   <meta name="description" content="Lowongan kerja Caregiver / Pendamping Lansia Assistenku. Rekrutmen resmi, transparan, dan profesional." />
 
   <style>
@@ -274,7 +274,7 @@
     </section>
 
     <footer>
-      © Assistenku • Rekrutmen Resmi & Transparan
+      © PT Assistenku Solusi Indonesia• Rekrutmen Resmi & Transparan
     </footer>
 
   </main>
