--- a/marketing-freelancer.html
+++ b/marketing-freelancer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marketing Freelancer Assistenku</title>
+  <title>Marketing Freelancer PT Assistenku Solusi Indonesia</title>
 
   <style>
     :root {
