--- a/profil.html
+++ b/profil.html
@@ -137,9 +137,17 @@
   <div class="card-grid">
 
     <div class="card">
-      <h3>NIB Resmi</h3>
-      <p>Dokumen resmi pendaftaran usaha.</p>
-      <img src="/NIB1.png" class="legal-img" alt="NIB Assistenku">
+      <h3>Dokumen Legal Perusahaan</h3>
+      <p>
+        Assistenku merupakan badan usaha yang terdaftar secara sah
+        dan menjalankan operasional sesuai dengan ketentuan hukum
+        yang berlaku di Indonesia.
+      </p>
+      <p>
+        Seluruh dokumen legal seperti akta pendirian, pengesahan AHU,
+        dan perizinan usaha tersedia dan dapat diakses sesuai
+        kebutuhan kerja sama.
+      </p>
     </div>
 
     <div class="card">
@@ -149,15 +157,9 @@
     </div>
 
     <div class="card">
-      <h3>Dokumen Legal Lain</h3>
-      <p>Sertifikasi dan izin operasional pendukung.</p>
-      <img src="/NIB2.png" class="legal-img" alt="Dokumen Legal Lain">
-    </div>
-
-    <div class="card">
-      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view"
+      <a href="https://drive.google.com/drive/folders/1kJm1dxylECteWevlq5t2FjFmLEXXLD0g"
          class="btn-primary" target="_blank">
-        Lihat Semua Dokumen Legalitas
+        Lihat Dokumen Legalitas
       </a>
 
       <a href="https://legal.assistenku.com"
