--- a/layanan.html
+++ b/layanan.html
@@ -467,6 +467,19 @@
 </footer>
 
 <script src="/script.js"></script>
+  <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
+  <div class="pwa-install__left">
+    <img src="/assets/icons/icon-192.png" alt="Assistenku" class="pwa-install__icon">
+    <div class="pwa-install__text">
+      <div class="pwa-install__title">Instal Assistenku</div>
+      <div class="pwa-install__subtitle">assistenku.com</div>
+    </div>
+  </div>
+
+  <div class="pwa-install__right">
+    <button id="pwaInstallBtn" class="pwa-install__btn">Instal</button>
+  </div>
+  </div>
 
 </body>
 </html>
