--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
   </script>
 
   <link rel="stylesheet" href="/styles.css" />
-</head>
-<link rel="manifest" href="/manifest.webmanifest">
-<meta name="theme-color" content="#0B5ED7">
-<link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
-  
-<body>
 
+  <!-- PWA (WAJIB DI DALAM HEAD) -->
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#0B5ED7">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+</head>
+
+<body>
 <header>
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
   <div class="navbar">
-    <img src="/logo.png" class="logo">
+    <img src="/logo.png" class="logo" alt="Assistenku">
 
     <nav>
       <ul>
@@ -126,17 +127,16 @@
   <p>• Membantu keluarga dan bisnis menjalankan kehidupan lebih efisien.</p>
   <p>• Mengedepankan keamanan, kenyamanan, dan profesionalitas.</p>
 
-  <br>
+<br>
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
-  
-  <button id="installAppBtn" class="btn-primary">Install</button>
 
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
-<script src="/script.js"></script>
-  <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
+
+<!-- Banner install (opsional, tapi rapi dan konsisten) -->
+<div id="pwaInstallBanner" class="pwa-install" style="display:block;">
   <div class="pwa-install__left">
     <img src="/assets/icons/icon-192.png" alt="Assistenku" class="pwa-install__icon">
     <div class="pwa-install__text">
@@ -146,18 +146,18 @@
   </div>
 
   <div class="pwa-install__right">
-  <button id="pwaInstallBtn" class="pwa-install__btn" style="display:none;">
-    Instal untuk Android
-  </button>
+    <button id="pwaInstallBtn" class="pwa-install__btn" style="display:none;" type="button">
+      Instal untuk Android
+    </button>
+  </div>
 </div>
 
-<div
-  id="iosInstallHint"
-  style="display:none; margin-top:12px; font-size:14px;"
->
+<!-- iOS hint (di luar banner, agar layout jelas) -->
+<div id="iosInstallHint" style="display:none; margin:12px 16px; font-size:14px;">
   <strong>Instal untuk Pengguna iPhone:</strong><br>
   Buka melalui <b>Safari</b> → tap <b>Share</b> → <b>Add to Home Screen</b>
 </div>
-  
+
+<script src="/script.js"></script>
 </body>
 </html>
