--- a/index.html
+++ b/index.html
@@ -131,32 +131,13 @@
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
+<button id="pwaInstallBtn" class="btn-primary" style="display:none;" type="button">
+  Install Aplikasi Assistenku (Android)
+</button>
+  
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
-
-<!-- Banner install (opsional, tapi rapi dan konsisten) -->
-<div id="pwaInstallBanner" class="pwa-install" style="display:block;">
-  <div class="pwa-install__left">
-    <img src="/assets/icons/icon-192.png" alt="Assistenku" class="pwa-install__icon">
-    <div class="pwa-install__text">
-      <div class="pwa-install__title">Instal Assistenku</div>
-      <div class="pwa-install__subtitle">assistenku.com</div>
-    </div>
-  </div>
-
-  <div class="pwa-install__right">
-    <button id="pwaInstallBtn" class="pwa-install__btn" style="display:none;" type="button">
-      Instal untuk Android
-    </button>
-  </div>
-</div>
-
-<!-- iOS hint (di luar banner, agar layout jelas) -->
-<div id="iosInstallHint" style="display:none; margin:12px 16px; font-size:14px;">
-  <strong>Instal untuk Pengguna iPhone:</strong><br>
-  Buka melalui <b>Safari</b> → tap <b>Share</b> → <b>Add to Home Screen</b>
-</div>
 
 <script src="/script.js"></script>
 </body>
