--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
-<button id="pwaInstallBtn" class="btn-primary" type="button">
-  Install Aplikasi (Android)
-</button>
+<a href="https://drive.google.com/file/d/1FLAxqxfi8Q1rG3RNqmHCteUEd0NKb5eh/view?usp=drivesdk" class="btn-primary">Unduh Aplikasi Assistenku</a>
   
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
