--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
-<a href="https://drive.google.com/file/d/1FLAxqxfi8Q1rG3RNqmHCteUEd0NKb5eh/view?usp=drivesdk" class="btn-primary">Unduh Aplikasi Assistenku</a>
+<div class="center-btn">
+  <a href="https://drive.google.com/file/d/1FLAxqxfi8Q1rG3RNqmHCteUEd0NKb5eh/view?usp=drivesdk"
+     class="btn-primary" target="_blank" rel="noopener">
+    Unduh Aplikasi Assistenku
+  </a>
+</div>
   
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
