--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </section>
 
 <div class="center-btn">
-  <a href="https://drive.google.com/file/d/1FLAxqxfi8Q1rG3RNqmHCteUEd0NKb5eh/view?usp=drivesdk"
+  <a href="https://rb.gy/hr0ia6"
      class="btn-primary" target="_blank" rel="noopener">
     Unduh Aplikasi Assistenku
   </a>
