--- a/kompro.html
+++ b/kompro.html
@@ -4,390 +4,276 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Company Profile | PT Assistenku Solusi Indonesia</title>
-  <meta name="description" content="Company Profile Assistenku – solusi asisten profesional berbasis sistem, aman, dan terverifikasi untuk individu dan perusahaan." />
+  <meta name="description" content="Company Profile Assistenku – solusi asisten profesional berbasis sistem, aman, dan terverifikasi." />
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      line-height: 1.6;
-      color: #1f2937;
-      background: #f9fafb;
+    body{
+      margin:0;
+      font-family:Arial,Helvetica,sans-serif;
+      line-height:1.7;
+      color:#1f2937;
+      background:#f3f6fb;
     }
 
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 60px 20px;
+    .container{
+      max-width:1100px;
+      margin:auto;
+      padding:60px 20px;
     }
 
-    h1, h2, h3 {
-      color: #0f3d8a;
-      margin-bottom: 16px;
+    h1,h2,h3{color:#0f3d8a;margin-bottom:14px}
+    h1{font-size:34px}
+    h2{font-size:26px}
+    h3{font-size:18px}
+
+    .section{
+      background:#fff;
+      margin-bottom:40px;
+      border-radius:14px;
+      padding:40px;
+      box-shadow:0 6px 18px rgba(15,61,138,.08);
     }
 
-    h1 { font-size: 36px; }
-    h2 { font-size: 28px; }
-    h3 { font-size: 20px; }
-
-    p { margin-bottom: 16px; }
-
-    ul { padding-left: 20px; }
-    li { margin-bottom: 8px; }
-
-    .section {
-      background: #ffffff;
-      margin-bottom: 40px;
-      border-radius: 12px;
-      padding: 40px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    /* HERO */
+    .hero{
+      background:linear-gradient(135deg,#0f3d8a,#1e5fd6);
+      color:#fff;
+      text-align:center;
+      padding:90px 20px 70px;
     }
 
-    .hero {
-      background: linear-gradient(135deg, #0f3d8a, #1e5fd6);
-      color: #ffffff;
-      text-align: center;
-      padding: 80px 20px;
+    .hero img{
+      width:120px;
+      margin-bottom:20px;
     }
 
-    .hero h1,
-    .hero p { color: #ffffff; }
-
-    .tagline {
-      font-size: 20px;
-      margin-top: 12px;
+    .tagline{
+      font-size:20px;
+      font-weight:500;
+      opacity:.95;
     }
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+    /* GRID */
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:20px;
+      margin-top:20px;
     }
 
-    .card {
-      background: #f3f6fb;
-      padding: 24px;
-      border-radius: 10px;
+    .card{
+      background:#eef3ff;
+      padding:24px;
+      border-radius:12px;
     }
 
-    /* ===============================
-   VISI & MISI
-================================= */
-.visi-misi {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 32px;
-  margin-top: 24px;
-}
-
-.visi-misi h3 {
-  margin-bottom: 12px;
-  color: #0f3d8a;
-}
-
-.visi-misi p {
-  line-height: 1.7;
-  color: #374151;
-}
-
-.visi-misi ul {
-  padding-left: 20px;
-}
-
-.visi-misi li {
-  margin-bottom: 10px;
-  color: #374151;
-}
-
-    /* === Tambahan untuk layanan lengkap === */
-    .service-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 16px;
-      margin-top: 24px;
+    /* VISI MISI */
+    .visi-misi{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+      gap:32px;
     }
 
-    .service-item {
-      background: #eef3ff;
-      padding: 18px;
-      border-radius: 8px;
-      font-weight: 500;
+    /* SERVICE */
+    .service-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:24px;
+      margin-top:32px;
     }
 
-    .cta {
-      text-align: center;
-      background: #0f3d8a;
-      color: #ffffff;
+    .service-card{
+      background:#eef3ff;
+      border-radius:14px;
+      padding:26px;
+      text-align:center;
     }
 
-    .cta h2,
-    .cta p { color: #ffffff; }
-
-    .cta a {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 14px 32px;
-      background: #ffffff;
-      color: #0f3d8a;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
+    .service-card img{
+      width:80px;
+      margin-bottom:14px;
     }
 
-    .footer {
-      text-align: center;
-      font-size: 14px;
-      color: #6b7280;
-      padding: 20px 0 40px;
+    .service-card ul{
+      list-style:none;
+      padding:0;
+      margin:0;
+      font-size:14px;
     }
-    .service-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 24px;
-  margin-top: 32px;
-}
 
-.service-card {
-  background: #eef3ff;
-  border-radius: 12px;
-  padding: 24px;
-  text-align: center;
-}
+    /* CTA */
+    .cta{
+      text-align:center;
+      background:#0f3d8a;
+      color:#fff;
+    }
 
-.service-card img {
-  width: 90px;
-  height: auto;
-  margin-bottom: 16px;
-}
+    .cta a{
+      display:inline-block;
+      margin-top:24px;
+      padding:14px 34px;
+      background:#fff;
+      color:#0f3d8a;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:bold;
+    }
 
-.service-card h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.service-card ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.service-card li {
-  margin-bottom: 6px;
-  font-size: 14px;
+    .footer{
+      text-align:center;
+      font-size:13px;
+      color:#6b7280;
+      padding:20px 0 40px;
     }
   </style>
 </head>
 
 <body>
 
-<!-- ===============================
-     HALAMAN — HERO
-================================= -->
+<!-- HERO -->
 <section class="hero">
-  <h1>ASSISTENKU SOLUSI INDONESIA</h1>
+  <img src="/logo.png" alt="Logo Assistenku">
+  <h1>PT ASSISTENKU SOLUSI INDONESIA</h1>
   <p class="tagline">Solusi Asisten Profesional dalam Satu Sistem Terpadu</p>
   <p>
     Platform penyedia dan pengelola asisten profesional yang membantu individu
-    maupun perusahaan bekerja lebih tenang, terkontrol, dan efisien.
+    dan perusahaan bekerja lebih tenang, terkontrol, dan efisien.
   </p>
 </section>
 
 <section class="container">
 
-<!-- ===============================
-     HALAMAN — PAIN POINT
-================================= -->
+<!-- PAIN POINT -->
 <div class="section">
-  <h2>Tantangan yang Sering Dihadapi Klien</h2>
-  <p>
-    Dalam penggunaan asisten atau tenaga pendukung, baik untuk kebutuhan rumah
-    tangga maupun operasional bisnis, banyak klien menghadapi risiko dan
-    ketidakpastian.
-  </p>
+  <h2>Tantangan Klien</h2>
   <ul>
-    <li>Sulit menemukan asisten yang benar-benar dapat dipercaya</li>
-    <li>Tidak adanya monitoring kinerja dan bukti pekerjaan</li>
+    <li>Sulit menemukan asisten terpercaya</li>
+    <li>Tidak ada monitoring kinerja</li>
     <li>Risiko transaksi di luar kesepakatan</li>
-    <li>Minimnya transparansi dan tanggung jawab</li>
-    <li>Tidak ada rekam jejak kerja yang jelas</li>
+    <li>Kurang transparansi</li>
+    <li>Tidak ada rekam jejak kerja</li>
   </ul>
 </div>
 
-<!-- ===============================
-     HALAMAN — SOLUSI
-================================= -->
+<!-- SOLUSI -->
 <div class="section">
-  <h2>Solusi dari Assistenku</h2>
-  <p>
-    Assistenku hadir sebagai <strong>sistem pengelolaan asisten profesional</strong>
-    yang aman, transparan, dan terstruktur untuk individu maupun perusahaan.
-  </p>
-
+  <h2>Solusi Assistenku</h2>
   <div class="grid">
     <div class="card">
       <h3>Sistem Terpusat</h3>
-      <p>Penugasan, komunikasi, dan pelaporan dalam satu platform.</p>
+      <p>Penugasan, komunikasi, dan laporan dalam satu platform.</p>
     </div>
     <div class="card">
       <h3>Mitra Terseleksi</h3>
-      <p>Mitra melalui proses seleksi, evaluasi, dan standar kerja.</p>
+      <p>Seleksi, evaluasi, dan standar kerja profesional.</p>
     </div>
     <div class="card">
-      <h3>Transparan & Aman</h3>
-      <p>Aktivitas dan transaksi tercatat untuk perlindungan semua pihak.</p>
+      <h3>Aman & Transparan</h3>
+      <p>Aktivitas dan transaksi tercatat.</p>
     </div>
   </div>
 </div>
 
-  <!-- ===============================
-     HALAMAN — VISI & MISI ASSISTENKU
-================================= -->
+<!-- VISI MISI -->
 <div class="section">
-  <h2>Visi & Misi Assistenku</h2>
-
+  <h2>Visi & Misi</h2>
   <div class="visi-misi">
-    <div class="visi">
-      <h3>Visi Kami</h3>
+    <div>
+      <h3>Visi</h3>
       <p>
-        Menjadi layanan asistensi paling terpercaya dan mudah diakses di
-        Indonesia, yang menghadirkan ketenangan dan kenyamanan bagi setiap
-        rumah dan bisnis.
+        Menjadi layanan asistensi paling terpercaya dan mudah diakses di Indonesia.
       </p>
     </div>
-
-    <div class="misi">
-      <h3>Misi Kami</h3>
+    <div>
+      <h3>Misi</h3>
       <ul>
-        <li>Menyediakan tenaga kerja yang terlatih dan beretika tinggi.</li>
-        <li>Menjaga kualitas layanan dengan proses manajemen modern.</li>
-        <li>Membantu keluarga dan bisnis menjalankan kehidupan lebih efisien.</li>
-        <li>Mengedepankan keamanan, kenyamanan, dan profesionalitas.</li>
+        <li>Menyediakan tenaga terlatih</li>
+        <li>Manajemen modern</li>
+        <li>Meningkatkan efisiensi klien</li>
+        <li>Mengedepankan keamanan</li>
       </ul>
     </div>
   </div>
 </div>
-  
-<div class="section">
-  <h2>Cakupan Layanan Assistenku</h2>
-  <p>
-    Assistenku menyediakan layanan asistensi terstruktur yang mencakup kebutuhan
-    individu, keluarga, hingga perusahaan, dengan sistem pengelolaan yang aman
-    dan terdokumentasi.
-  </p>
 
+<!-- LAYANAN -->
+<div class="section">
+  <h2>Cakupan Layanan</h2>
   <div class="service-grid">
 
     <div class="service-card">
-      <img src="/assets/services/personal-family.png" alt="Asisten Pribadi & Keluarga">
-      <h3>Asisten Pribadi & Keluarga</h3>
+      <h3>Keluarga</h3>
       <ul>
-        <li>Asisten Rumah Tangga (ART)</li>
-        <li>Baby Sitter</li>
+        <li>ART</li>
+        <li>Babysitter</li>
         <li>Pendamping Lansia</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/office-operational.png" alt="Asisten Kantor">
-      <h3>Asisten Kantor & Operasional</h3>
+      <h3>Kantor</h3>
       <ul>
-        <li>Office Boy / Girl</li>
+        <li>Office Boy/Girl</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/driver.png" alt="Driver Pribadi">
-      <h3>Driver Pribadi</h3>
+      <h3>Driver</h3>
       <ul>
         <li>Pengemudi Pribadi</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/cleaning.png" alt="Tenaga Kebersihan">
-      <h3>Tenaga Kebersihan</h3>
+      <h3>Kebersihan</h3>
       <ul>
         <li>Cleaning Service</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/technical.png" alt="Teknis & Perbaikan">
-      <h3>Mitra Proyek & Teknis</h3>
+      <h3>Teknis</h3>
       <ul>
         <li>Service & Perbaikan</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/general.png" alt="Jasa Umum">
-      <h3>Layanan Umum / Serbaguna</h3>
+      <h3>Digital</h3>
       <ul>
-        <li>Jasa Umum</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <img src="/assets/services/transport.png" alt="Transportasi & Kurir">
-      <h3>Transportasi & Kurir</h3>
-      <ul>
-        <li>Transportasi</li>
-        <li>Kirim Barang</li>
-        <li>Jastip</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <img src="/assets/services/digital.png" alt="Digital & Kreatif">
-      <h3>Digital & Kreatif</h3>
-      <ul>
-        <li>Pembuatan Website</li>
+        <li>Website</li>
         <li>Sistem Digital</li>
       </ul>
     </div>
 
     <div class="service-card">
-      <img src="/assets/services/autocad.png" alt="AutoCAD & Drafting">
-      <h3>Teknis Spesialis</h3>
+      <h3>Spesialis</h3>
       <ul>
-        <li>AutoCAD & Drafting Teknis</li>
+        <li>AutoCAD</li>
       </ul>
     </div>
 
   </div>
 </div>
 
-<!-- ===============================
-     HALAMAN  — CTA
-================================= -->
+<!-- CTA -->
 <div class="section cta">
-  <h2>Bagaimana Assistenku Bekerja</h2>
+  <h2>Cara Kerja Assistenku</h2>
   <p>
-    Klien mengajukan kebutuhan, Assistenku menyeleksi mitra, dan seluruh proses
-    penugasan hingga pembayaran dilakukan melalui sistem yang terdokumentasi.
-  </p>
-  <p>
-    Dengan dukungan <strong>Safety, Legal & Audit Logging</strong>, Assistenku
-    membantu klien bekerja lebih tenang dan terkontrol.
+    Seluruh proses terdokumentasi dengan sistem
+    <strong>Safety, Legal & Audit Logging</strong>.
   </p>
 
-  <!-- Tombol Download Company Profile -->
-  <a href="https://drive.google.com/file/d/1VAYOs2PmIo7M5f8I6LLwA8zMubNuxUbk/view?usp=drivesdk"
-     target="_blank"
-     style="display:inline-block; margin-top:24px; padding:14px 32px;
-            background:#e5edff; color:#0f3d8a; border-radius:8px;
-            text-decoration:none; font-weight:bold;">
-    Download Company Profile (PDF)
+  <a href="https://drive.google.com/file/d/1ABEHICwxkmj6TuzvN3cLd2Kk31EN82sF/view?usp=sharing>
+    Download Company Profile PDF
   </a>
 
-  <!-- Tombol Detail Layanan -->
   <br><br>
-  <a href="/layanan">Lihat Detail Layanan Assistenku</a>
+  <a href="/layanan">Lihat Detail Layanan</a>
 </div>
 
 <div class="footer">
-  <p>&copy; PT Assistenku Solusi Indonesia. Semua hak dilindungi.</p>
+  © PT Assistenku Solusi Indonesia
 </div>
 
 </section>
