--- a/mockupwebsite/index.html
+++ b/mockupwebsite/index.html
@@ -167,6 +167,6 @@
   </div>
 </footer>
 
-<script src="./assets/mockupwebsite.js" defer></script>
+<script src="/mockupwebsite/assets/mockupwebsite.js" defer></script>
 </body>
         </html>
