--- a/mockupwebsite/index.html
+++ b/mockupwebsite/index.html
@@ -13,11 +13,13 @@
 <header class="topbar">
   <div class="container topbar-inner">
     <div class="brand">
-      <div class="brand-mark" aria-hidden="true"></div>
-      <div class="brand-text">
-        <strong>Assistenku</strong>
-        <span>Penawaran Mockup Website UMKM • 17 Sektor</span>
-      </div>
+  <a class="brand-link" href="/" aria-label="Beranda Assistenku">
+    <img class="brand-logo" src="/logo.png" alt="Logo Assistenku" loading="lazy">
+    <div class="brand-text">
+      <strong>Assistenku</strong>
+      <span>PT Assistenku Solusi Indonesia • Penawaran Mockup Website • 17 Sektor</span>
+    </div>
+  </a>
     </div>
 
     <div class="topbar-actions">
@@ -153,8 +155,8 @@
 <footer class="footer">
   <div class="container footer-inner">
     <div>
-      <strong>Assistenku</strong>
-      <p class="muted">Penawaran mockup website UMKM per sektor ekonomi.</p>
+  <strong>Assistenku</strong>
+  <p class="muted">PT Assistenku Solusi Indonesia • Penawaran mockup website per sektor ekonomi.</p>
     </div>
     <div class="footer-links">
       <a class="link" href="/">Beranda</a>
