--- a/layanan.html
+++ b/layanan.html
@@ -505,7 +505,7 @@
 </section>
 
 <footer>
-  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+  <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
 
 <script src="/script.js"></script>
