--- a/layanan.html
+++ b/layanan.html
@@ -69,14 +69,14 @@
 
   <!-- Logo Dapur Putri -->
   <img
-    src="/assets/dapurputrilogo.png"
-    alt="Dapur Putri - Catering Premium"
+    src="/dapurputri/assets/dapurputrilogo.png"
+    alt="Dapur Putri - Catering Rumahan"
     class="card-image"
     loading="lazy"
   />
 
   <h3>Catering — Dapur Putri</h3>
-  <p>Catering rumahan dengan kualitas premium. Menu variatif, higienis, dan siap untuk kebutuhan harian maupun acara.</p>
+  <p>Catering rumahan dengan kualitas rapi. Menu variatif, higienis, cocok untuk kebutuhan harian maupun acara.</p>
 
   <ul>
     <li>Menu harian & paket keluarga</li>
@@ -86,7 +86,7 @@
   </ul>
 
   <div class="apply-box">
-    <a class="btn-primary" href="/dapurputri.html">
+    <a class="btn-primary" href="/dapurputri/dapurputri.html">
       Lihat Menu Catering
     </a>
 
@@ -96,7 +96,7 @@
     </a>
   </div>
 
-  </div>
+</div>
 
   <!-- Auto<!-- Pembuatan Website & Sistem -->
 <div class="card">
