--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     "name": "Assistenku",
     "url": "https://assistenku.com",
     "logo": "https://assistenku.com/logo.png",
-    "description": "Assistenku adalah layanan asistensi rumah tangga dan bisnis yang menyediakan tenaga kerja profesional, aman, dan terpercaya."
+    "description": "Assistenku menyediakan layanan asistensi rumah tangga dan bisnis dengan tenaga kerja berpengalaman, aman, dan terpercaya."
   }
   </script>
 
@@ -39,7 +39,7 @@
     "@type": "WebPage",
     "name": "Beranda Assistenku",
     "url": "https://assistenku.com",
-    "description": "Assistenku menyediakan layanan asistensi rumah tangga dan bisnis dengan tenaga kerja profesional, aman, dan terpercaya.",
+    "description": "Assistenku membantu kebutuhan rumah tangga dan bisnis melalui layanan asistensi berbasis pengalaman kerja dan pengelolaan yang bertanggung jawab.",
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://assistenku.com"
@@ -63,7 +63,7 @@
 
   <link rel="stylesheet" href="/styles.css" />
 
-  <!-- PWA (WAJIB DI DALAM HEAD) -->
+  <!-- PWA -->
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#0B5ED7">
   <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
@@ -99,35 +99,33 @@
 </header>
 
 <section style="padding-top:160px;">
-  <h1>Selamat Datang di Assistenku</h1>
+  <h1>Assistenku</h1>
 
   <p>
-    Kehidupan modern menuntut kita bergerak cepat, fokus, dan efisien. Di tengah
-    kesibukan itu, kami percaya bahwa setiap orang berhak mendapatkan bantuan
-    yang aman, profesional, dan dapat diandalkan. Assistenku hadir sebagai partner
-    terpercaya yang mendampingi keluarga, individu, maupun bisnis—memberikan
-    ketenangan, kerapian, dan kenyamanan dalam kegiatan sehari-hari.
+    Kehidupan modern menuntut fokus dan efisiensi. Dalam kondisi tersebut,
+    Assistenku hadir untuk membantu kebutuhan rumah tangga, individu,
+    maupun operasional bisnis secara lebih tertata dan bertanggung jawab.
   </p>
 
   <p>
-    Dengan tenaga kerja terlatih, proses seleksi ketat, serta standar pelayanan
-    yang berorientasi pada keamanan dan kejujuran, Assistenku memastikan Anda
-    mendapatkan pengalaman terbaik dari setiap layanan yang kami sediakan.
+    Assistenku menyediakan layanan asistensi yang ditangani oleh tenaga kerja
+    yang diseleksi berdasarkan pengalaman dan rekam kerja di bidangnya,
+    dengan pengelolaan layanan yang jelas dan terkontrol.
   </p>
 
   <h2>Visi Kami</h2>
   <p>
-    Menjadi layanan asistensi paling terpercaya dan mudah diakses di Indonesia,
-    yang menghadirkan ketenangan dan kenyamanan bagi setiap rumah dan bisnis.
+    Menjadi layanan asistensi yang terpercaya dan mudah diakses,
+    untuk membantu kebutuhan rumah tangga dan bisnis di Indonesia.
   </p>
 
   <h2>Misi Kami</h2>
-  <p>• Menyediakan tenaga kerja yang terlatih dan beretika tinggi.</p>
-  <p>• Menjaga kualitas layanan dengan proses manajemen modern.</p>
-  <p>• Membantu keluarga dan bisnis menjalankan kehidupan lebih efisien.</p>
-  <p>• Mengedepankan keamanan, kenyamanan, dan profesionalitas.</p>
+  <p>• Menyediakan layanan asistensi berbasis pengalaman kerja.</p>
+  <p>• Mengelola layanan secara rapi, jelas, dan bertanggung jawab.</p>
+  <p>• Membantu keluarga dan bisnis bekerja lebih efisien.</p>
+  <p>• Menjaga kepercayaan melalui proses dan komunikasi yang transparan.</p>
 
-<br>
+  <br>
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
@@ -137,7 +135,7 @@
     Unduh Aplikasi Assistenku
   </a>
 </div>
-  
+
 <footer>
   <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
